<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/outline_account_box_black_48dp"
            android:title="@string/personal"
            />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/outline_video_library_black_48dp"
            android:title="@string/video" />
        <item
            android:id="@+id/nav_gifts"
            android:icon="@drawable/outline_shop_black_48dp"
            android:title="@string/money" />
        <item
            android:id="@+id/nav_gifts_activated"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/gift_card_bought" />
    </group>

    <item android:title="@string/about_us">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/outline_info_black_48dp"
                    android:title="@string/how_it_work" />
                <item
                    android:id="@+id/nav_connect_us"
                    android:icon="@drawable/outline_question_answer_black_48dp"
                    android:title="@string/call_us" />
                <item
                    android:id="@+id/nav_about_app"
                    android:icon="@drawable/outline_live_help_black_48"
                    android:title="О приложении" />
            </group>
        </menu>
    </item>


</menu>
