<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    tools:context="menu.fragments.ConnectUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="Для связи с нами заполните форму ниже и нажмите кнопку ОТПРАВИТЬ."
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/e_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="20"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_connect_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="@string/myAlphaNumeric"
                android:hint="@string/Name"
                android:inputType="textPersonName|textCapWords|textFilter"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/surname_connect_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/myAlphaNumeric"
                android:hint="@string/Surname"
                android:inputType="textPersonName|textCapWords|textFilter"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:hint="@string/message" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/send"
            android:background="#FF88B53F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@android:color/background_light"
            android:textSize="16sp"
            android:text="@string/sent"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>